<resources>
    <string name="app_name">Ku Sehat</string>

    <string name="informasi_penyakit">Informasi Penyakit</string>
    <string name="informasi_rumah_sakit">Informasi Rumah Sakit</string>
    <string name="diagnosa">Diagnosa</string>
    <string name="train">Train</string>
    <string name="predict">Predict</string>

    <string name="detail_informasi">Detail Informasi</string>
    <string name="artikel">Artikel</string>
    <string name="video">Video</string>
    <string name="info_rumah_sakit">Info Rumah Sakit</string>
    <string name="penyakit">Penyakit</string>

    <string name="jakarta">Jakarta</string>
    <string name="bogor">Bogor</string>
    <string name="depok">Depok</string>
    <string name="tangerang">Tangerang</string>
    <string name="bekasi">Bekasi</string>

    <string name="nama_rumah_sakit">Nama Rumah Sakit : </string>
    <string name="alamat">Alamat : </string>
    <string name="no_telp">No Telp : </string>
    <string name="lihat_pada_peta">Lihat Pada Peta </string>

    <string name="temp">temp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail_hospital_maps">Map</string>

    <string name="rest_api_url_hint">API URL</string>
    <string name="raw_json">RAW JSON</string>
    <string name="send">SEND</string>
    <string name="clear">CLEAR</string>
    <string name="ok">OK</string>
    <string name="input_raw_json">Input Raw JSON</string>
    <string name="model_json">MODEL JSON</string>
    <string name="error_conenction">Error Connection or JSON incorrect</string>

</resources>
