<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.feechan.imcare.activity.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginBottom="20dp"
        android:src="@drawable/health"
        android:scaleType="fitXY"
        />
    <Button
        android:id="@+id/informasiPenyakitButton"
        style="@style/ButtonStyle1"
        android:text="@string/informasi_penyakit"/>

    <Button
        android:id="@+id/informasiRumahSakitButton"
        style="@style/ButtonStyle1"
        android:text="@string/informasi_rumah_sakit"/>

    <Button
        android:id="@+id/diagnosaButton"
        style="@style/ButtonStyle1"
        android:text="@string/diagnosa"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/engagement"
        android:scaleX="-1"/>
</LinearLayout>
