<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:clickable="true"
    android:focusable="true"
    android:padding="10dp"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="3dp"
            android:text="@string/nama_rumah_sakit"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/namaTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nama_rumah_sakit"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="3dp"
            android:text="@string/alamat"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/alamatTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alamat"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_marginRight="3dp"
            android:text="@string/no_telp"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/noTelpTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_telp"/>
    </LinearLayout>
</LinearLayout>